# payment-rs

./: .env.example  .gitignore  Cargo.toml  README.md  SETUP.md  setup.sql
.claude/: settings.local.json
migrations/: 001_create_payment_orders.sql
src/: main.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/application/: dto.rs  mod.rs  payment_service.rs
src/domain/: entities.rs  errors.rs  events.rs  mod.rs  value_objects.rs
src/infrastructure/: mod.rs
src/infrastructure/adapters/: mod.rs  mysql_payment_repository.rs  wechat_pay_adapter.rs
src/infrastructure/config/: mod.rs  wechat_config.rs
src/ports/: mod.rs  payment_repository_port.rs  wechat_pay_port.rs
